# Maeve

./: .gitattributes  .gitignore  CMakeLists.txt  bugs.txt  makefile  plan.txt  readme.md  vcpkg.json
glad/: glad.c
lib/glad/: glad.c  glad.h
res/: plan.txt
res/shaders/: bphong.frag  bphong.vert  shader.frag
res/shaders/deferred/: draw_gbuffers.frag  draw_gbuffers.vert  fullscreen.frag  gbuffers.frag  mask.frag  pbr.frag  postprocess.frag  screenquad.frag  shading.frag  shadow.frag  shadow.vert  shadowcalc.frag  shadowcalc.vert  texture.frag  texture.vert  texture_fullscreen.frag  texturea.frag  texturea.vert
res/shaders/editor/: bvh_vis.vert  bvh_vis_instanced.frag  bvh_vis_instanced.vert  singlecolor.vert
res/shaders/ui/: circle.frag  colorwheel.frag  colorwheel.vert  defocus.frag  defocus.vert  frostedrect.frag  frostedrect.vert  gradientrect.frag  menu.frag  menu.vert  rect.frag  text.frag
src/: main.cpp
src/common/: camera.cpp  camera.h  input.cpp  input.h  qk.cpp  qk.h  shader.cpp  shader.h  stat_counter.cpp  stat_counter.h
src/engine/: asset_manager.cpp  asset_manager.h  render_engine.cpp  render_engine.h  scene_manager.cpp  scene_manager.h
src/engine/deferred/: deffered_manager.cpp  deffered_manager.h
src/engine/editor/: light_manipulation.cpp  object_manipulation.cpp  object_manipulation.h
src/engine/io/: obj_loader.cpp
src/ui/: box_ui.cpp  box_ui.h  text_renderer.cpp  text_renderer.h  ui.cpp  ui.h
